fixed overflow

--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,7 +1,9 @@
 .page {
-  &__content {
+  &__main {
     overflow-x: hidden;
+  }
 
+  &__content {
     &--with-menu {
       overflow-y: hidden;
     }
